# kahlitos_way

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  flake.nix  kahlitos_way.py  kahlo_daemon.py  khalito_client.py  logging.conf  requirements.txt
application/: main.py
daemon/: kahlo_daemon.py
docker_db/: docker-compose.yml
logs/: logging.conf
pi_daemon/: .clang-format  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  gtest_utils  main
pi_daemon/cmake/: BuildUtils.cmake
pi_daemon/include/: cli_parser.h  internal_utils.h  server.h
pi_daemon/src/: CMakeLists.txt  cli_parser.c  internal_utils.c  main.c  server.c
pi_daemon/tests/: CMakeLists.txt  gtest_argparse.cpp  gtest_utils.cpp
web_client/: database.py  docker-compose.yml  kahlitos_way.py  kahlo_daemon.py
web_client/private/: config_template.py
